Fix text alignment and width for h1 element in style.css

--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,8 @@ h1 {
   font-size: 55px;
   margin-bottom: 200px;
   letter-spacing: 5px;
+  text-align: center;
+  width: 100%;
 }
 
 .menu{
